src/test/ui/parser/issue-32446.stderr
error: expected one of `async`, `const`, `crate`, `extern`, `fn`, `pub`, `type`, `unsafe`, or `}`, found `...`
  --> $DIR/issue-32446.rs:4:11
   |
LL | trait T { ... }
   |           ^^^ expected one of 9 possible tokens

error: aborting due to previous error

